--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -9,10 +9,11 @@
   gap: 20px 17px;
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 
 @media screen and (max-width: 480px) {
   .cards {
-    margin-top: 0;
+    margin: 0;
   }
 }
