--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -31,6 +31,9 @@
   line-height: 1.2;
   grid-area: title;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__edit-button {
@@ -38,12 +41,12 @@
   width: 24px;
   height: 24px;
   grid-area: button;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
 }
 
 .profile__edit-button:hover {
-  opacity: 0.5;
-  transition: opacity;
+  opacity: 0.6;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .profile__description {
@@ -54,6 +57,9 @@
   font-size: 18px;
   line-height: 1.2;
   margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .profile__add-button {
@@ -61,13 +67,13 @@
   width: 150px;
   height: 50px;
   margin-left: auto;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   border-radius: 2px;
 }
 
 .profile__add-button:hover {
-  opacity: 0.5;
-  transition: opacity;
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
 }
 
 @media screen and (max-width: 780px) {
@@ -83,36 +89,34 @@
     width: 20px;
     height: 20px;
   }
-
-  .profile__description {
-    font-size: 18px;
-  }
 }
 
 @media screen and (max-width: 650px) {
   .profile {
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     padding-top: 36px;
+  }
+
+  .profile__image {
+    margin: 0;
   }
 
   .profile__info {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 14px;
     justify-content: center;
-    align-items: center;
+    padding-top: 26px;
   }
 
   .profile__title {
-    font-size: 50px;
     justify-content: center;
   }
 
   .profile__description {
+    width: 100%;
     text-align: center;
-    font-size: 35px;
   }
 
   .profile__edit-button {
@@ -122,73 +126,26 @@
 
   .profile__add-button {
     margin: 36px 0;
-    width: 90%;
-  }
-}
-
-@media screen and (max-width: 520px) {
-  .profile__title {
-    font-size: 42px;
-  }
-
-  .profile__description {
-    font-size: 22px;
-  }
-
-  .profile__edit-button {
-    width: 20px;
-    height: 20px;
+    width: 100%;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .profile {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 36px;
-  }
-
-  .profile__image {
-    display: flex;
-    justify-content: center;
-  }
-
-  .profile__info {
-    padding-top: 26px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: center;
-  }
-
   .profile__title {
     text-align: center;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
     font-size: 22px;
-    line-height: 1.2;
   }
 
   .profile__edit-button {
     width: 18px;
     height: 18px;
+    position: absolute;
+    right: 34px;
+    top: 186px;
   }
 
   .profile__description {
     width: 100%;
-    margin-top: 14px;
-    text-align: center;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 400;
     font-size: 14px;
-    line-height: 1.2;
-  }
-
-  .profile__add-button {
-    margin: 36px 0;
-    width: 90%;
   }
 }
