--- a/blocks/card.css
+++ b/blocks/card.css
@@ -42,9 +42,10 @@
   width: 21px;
   height: 18px;
   border: none;
+  transition: opacity 0.3s ease-in-out;
+  cursor: pointer;
 }
 
 .card__like-button:hover {
   opacity: 0.5;
-  transition: opacity 0.5s ease;
 }
