--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,7 +10,7 @@
   display: none;
 }
 
-.modal__opened {
+.modal_opened {
   display: flex;
 }
 
@@ -57,7 +57,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -77,10 +77,6 @@
 
 .modal__input:first-of-type {
   margin-top: 54px;
-}
-
-input::placeholder {
-  color: #000;
 }
 
 .modal__button {
