--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -7,11 +7,16 @@
   bottom: 0;
   padding: 0 19px;
   z-index: 9999;
-  display: none;
+  opacity: 0;
+  display: flex;
+  visibility: hidden;
+  transition: visibility 0s 0.5s, opacity 0.5s ease-in-out;
 }
 
 .modal_opened {
-  display: flex;
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0s, opacity 0.5s ease-in-out;
 }
 
 .modal__container {
@@ -99,6 +104,26 @@
 
 .modal__button:hover {
   opacity: 0.8;
+}
+
+.modal__container-image {
+  position: relative;
+  margin: auto;
+}
+
+.modal__image {
+  max-width: 75vw;
+  max-height: 75vh;
+  object-fit: cover;
+}
+
+.modal__image-caption {
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.2;
+  margin: 10px 0 0;
 }
 
 @media screen and (max-width: 610px) {
