--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -132,6 +132,11 @@
   color: #000;
   border: 1px solid #000;
   opacity: 0.2;
+  transition: none;
+}
+
+.modal__button_disabled:hover {
+  opacity: 0.2;
 }
 
 .modal__container-image {
