--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -4,6 +4,12 @@
   padding-top: 40px;
 }
 
+.profile__image_overlay {
+  position: relative;
+  display: inline-block;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 .profile__image {
   width: 120px;
   height: 120px;
@@ -11,6 +17,37 @@
   object-fit: cover;
   background-position: center;
   margin-right: 24px;
+}
+
+.profile__image:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.profile__image_edit {
+  background: transparent url(../images/edit-icon.svg) center no-repeat;
+  background-size: cover;
+  position: absolute;
+  height: 26px;
+  width: 26px;
+  align-self: center;
+  border: none;
+  top: 50px;
+  left: 48px;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.profile__image_edit:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.profile__image_overlay:hover .profile__image_edit {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.profile__image_overlay:hover .profile__image {
+  opacity: 0.4;
 }
 
 .profile__info {
